[project]
name = "python-mcp-harmness-engineering-tools"
version = "0.1.0"
description = "This repository is to create harmness engineering tools for AI agents for code with sense"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp==3.4.2",
    "mcp==1.27.2",
]

[tool.pymetrica]
exclude = [".venv", ".devcontainer", "__pycache__", ".git", ".ruff_cache"]